# rpi-pico-htu21d

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  htu21d_temperature_humidity_read.c
include/haw/: HTU21D.h
src/: CMakeLists.txt  HTU21D.c
